optimize: JACKSON3 替换